--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventario de productos</title>
-    <link rel="stylesheet" href="./bootstrap.min.css">
     <script src="inventario.js"></script>
 </head>
     <header>
@@ -20,12 +19,12 @@
             <input type="text" id="nombre" placeholder="Nombre del producto">
             <input type="number" id="cantidad" placeholder="Cantidad del producto">
             <input type="number"id="costo" placeholder="Costo del producto"><br><br>
-            <input type="submit" value= "Agregar" id="btnAgregar">
+            <input type="button" value= "Agregar" id="btnAgregar">
         </form>
     </div>
 
     <div id="busqueda">
-        <h2>Búsqueda</h2>
+        <h2>Buscar</h2>
         <form id="formulario_Busqueda">
             <input type="number" id="busCodigo" placeholder="Código del producto"> <br><br>
             <input type="button" value= "Buscar" id="btnBuscar">
@@ -48,5 +47,5 @@
         </div>
     </div>
 </body>
-<script src="./js/app.js"></script>
+<script src="./app.js"></script>
 </html>
